[package]
authors = ["Antti Keränen <detegr@rbx.email>"]
categories = ["external-ffi-bindings", "compilers"]
description = "FFI bindings to CBQN"
documentation = "https://detegr.github.io/cbqn-sys/cbqn_sys"
edition = "2021"
homepage = "https://github.com/Detegr/cbqn-sys"
keywords = ["BQN", "APL", "array"]
license = "GPL-3.0-only"
links = "cbqn"
name = "cbqn-sys"
readme = "README.md"
repository = "https://github.com/Detegr/cbqn-sys.git"
version = "0.0.5"

[build-dependencies]
bindgen = "0.59.2"
fs_extra = "1.2.0"
