[package]
authors = ["Antti Keränen <detegr@rbx.email>"]
categories = ["external-ffi-bindings", "compilers"]
description = "FFI bindings to CBQN"
documentation = "https://detegr.github.io/cbqn-sys/cbqn_sys"
edition = "2021"
homepage = "https://github.com/Detegr/cbqn-sys"
keywords = ["BQN", "APL", "array"]
license = "GPL-3.0-only"
links = "cbqn"
name = "cbqn-sys"
readme = "README.md"
repository = "https://github.com/Detegr/cbqn-sys.git"
version = "0.1.0"

[build-dependencies]
bindgen = { version = "0.65.1", optional = true }
fs_extra = { version = "1.3.0", optional = true }

[features]
default = ["shared-object"]
shared-object = ["dep:fs_extra"]
bindgen = ["dep:bindgen"]
